--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -69,6 +69,7 @@
   </div>
   <div class="row-fluid">
     <div id="directives-calendar" ng-controller="BookAppointmentCtrl">
+      <div flash-message="5000"></div>
       <div ng-show="showCalendar">
         <div id="calender-show">
           <!-- <link href="css/calender/font-awesome.css" rel="stylesheet"> -->
@@ -91,10 +92,10 @@
                     <label class="control-label col-sm-3" for="name">Patient Name: *</label>
                     <div class="col-sm-9">
                       <!-- <input type="text" class="form-control" name="name" ng-click="submitted = false" id="patientName" ng-model="patientName" placeholder="Name" required> -->
-                      <ui-select ng-model="patient.selected" theme="bootstrap" name="name" ng-disabled="disabled" on-select="fillPatientDetails()" reset-search-input="false" refresh="refreshPatientNames($select.search)" refresh-delay="0" ng-required="patientNameEntered">
+                      <ui-select ng-model="patient.selected" theme="bootstrap" name="name" ng-disabled="disabled" on-select="fillPatientDetails()" reset-search-input="false" ng-required="patientNameEntered">
                       <ui-select-match placeholder="Select Patient Name" allow-clear="true">{{$select.selected.name}}</ui-select-match>
-                      <ui-select-choices repeat="patient in patientsInfo | propsFilter: {name: $select.search}">
-                        <div ng-bind-html="patient.name + ' (' +patient.mobile + ')' | highlight: $select.search"></div>
+                      <ui-select-choices repeat="patient in patientsInfo | propsFilter: {name: $select.search}" refresh="refreshPatientNames($select.search)" refresh-delay="0">
+                        <div ng-bind-html="patientDetails(patient) | highlight: $select.search"></div>
                       </ui-select-choices>
                       </ui-select>
                       <span class="error validation-msg-color" ng-show="appointmentForm.name.$error.required" ng-if='appointmentForm.name.$dirty'>Please Enter Patient Name !</span>
@@ -369,7 +370,6 @@
               <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
             </div>
           </script>
-          <div flash-message="5000"></div>
           <!-- <div ui-calendar="calendarOptions" ng-model="eventSources" calendar="myCalendar"></div> -->
           <!-- <div class="alert-success" ng-show="alertMessage != undefined && alertMessage != ''">
             <h4>{{alertMessage}}</h4>
