--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,7 +34,7 @@
   <div class="row search_box">
     <div id='doctor-location' ng-controller="doctorLocationFetchCtrl">
       <div class="row">
-        <div class="col-xs-4 col-xs-offset-2">
+        <div class="col-xs-4 col-xs-offset-1">
           <form class="form-horizontal" role="form" novalidate>
             <div class="form-group">
               <label for="doctorName" class="control-label col-sm-5">Doctor Name: *</label>
@@ -49,11 +49,11 @@
             </div>
           </form>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-6">
           <form class="form-horizontal" role="form" novalidate>
             <div class="form-group">
-              <label for="clinicName" class="control-label col-sm-5">Clinic Location: *</label>
-              <div class="col-sm-7">
+              <label for="clinicName" class="control-label col-sm-4">Clinic Location: *</label>
+              <div class="col-sm-8">
                 <ui-select ng-model="location.selected" theme="bootstrap" ng-disabled="disableLocation" on-select="fetchCalenderForDoctorLocation(location.selected.id)" style="width:auto">
                 <ui-select-match placeholder="----- Select -----" allow-clear="true">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices repeat="location in locations | propsFilter: {name: $select.search}">
@@ -191,7 +191,7 @@
                   <div class="form-group">
                     <label class="control-label col-sm-3" for="email">Email: </label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" id="patientEmail" ng-model="patientEmail" ng-disabled="true">
+                      <input type="text" class="form-control" id="patientEmail" ng-model="patientEmail" ng-disabled="true">
                     </div>
                   </div>
                   <div class="form-group">
