--- a/public/css/posts/BookAppointment.css
+++ b/public/css/posts/BookAppointment.css
@@ -163,3 +163,8 @@ input::-webkit-inner-spin-button {
 .tooltip-inner {
     text-align:left;
 }
+
+#clinicLocations th, td {
+    border: 1px solid black;
+    text-align: center;
+}
