--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -69,7 +69,7 @@
   </div>
   <div class="row-fluid">
     <div ng-controller="BookAppointmentCtrl">
-        <table id="clinicLocations" align="center" ng-if="clinics.length" ng-show="showCalendar">
+        <table id="clinicLocations" align="center" ng-if="clinics.length" ng-show="showCalendar && locationId == -1">
           <tr>
             <th>Clinic Location</th>
             <th>Working Hours</th>
