--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -54,7 +54,7 @@
             <div class="form-group">
               <label for="clinicName" class="control-label col-sm-4">Clinic Location: *</label>
               <div class="col-sm-8">
-                <ui-select ng-model="location.selected" theme="bootstrap" ng-disabled="disableLocation" on-select="fetchCalenderForDoctorLocation(location.selected.id, locations)" style="width:auto">
+                <ui-select ng-model="location.selected" theme="bootstrap" ng-disabled="disableLocation" on-select="fetchCalenderForDoctorLocation(location.selected.id)" style="width:auto">
                 <ui-select-match placeholder="----- Select -----" allow-clear="true">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices repeat="location in locations | propsFilter: {name: $select.search}">
                   <div ng-bind-html="location.name | highlight: $select.search"></div>
