Show delayed appointment list

--- a/public/css/posts/BookAppointment.css
+++ b/public/css/posts/BookAppointment.css
@@ -188,3 +188,7 @@ input::-webkit-inner-spin-button {
 #todays_schedule {
     padding: 20px;
 }
+
+#delayedAppts th, td {
+  text-align: center;
+}
