Show Appointment calendar only for a valid doctor(not for ---select---)

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -111,7 +111,7 @@
               <li class="divider"></li>
               <li role="menuitem" ng-click="delay_appointment()"><a>Delay Appointments</a></li>
               <li role="menuitem" ng-click="getTodaysSchedule()"><a>Today's Schedule</a></li>
-              <li role="menuitem" ng-click="showCalendar()"><a>Appointment Calendar</a></li>
+              <li role="menuitem" ng-click="doctorIdValid() && showCalendar()"><a>Appointment Calendar</a></li>
             </ul>
           </div>
         </div>
