--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -384,7 +384,7 @@
           </script>
           <script type="text/ng-template" id="appointmentBookingPastTime.html">
             <div class="modal-header">
-              <div class="modal-title">Past Date Appointment</div>
+              <div class="modal-title">{{title}}</div>
             </div>
             <div class="modal-body">
               <form class="form-horizontal" role="form">
